[FIX] Fixes the layout problem of absolute position and floating.

--- a/statics/styles/style.css
+++ b/statics/styles/style.css
@@ -14,6 +14,7 @@ body
     background: #DCE4ED url('../images/header.png') repeat-x;
     margin: 0 auto;
     overflow-y: scroll;
+    padding: 0;
     width: 1000px;
 }
 
@@ -592,12 +593,16 @@ a:hover
 
 #content
 {
-    margin: 0 225px 0 25px;
-    min-height: 300px;
-    overflow: hidden;
+    float: left;
+    width: 800px;
 }
 
 #footer
+{
+    clear: both;
+}
+
+#footer-background
 {
     background: url('../images/footer.png') repeat-x center;
     height: 120px;
@@ -630,11 +635,8 @@ a:hover
  */
 #sidebar
 {
-    height: 100%;
-    margin-left: 800px;
-    padding-left: 15px;
-    position: absolute;
-    top: 0;
+    float: right;
+    margin: -240px -15px 0 15px;
     width: 200px;
 }
 
